Point dashboard to wings etcd

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -49,7 +49,7 @@
         <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/infrastructure-ci"></iframe>
       </div>
       <div class="col-long">
-        <iframe class="long-pipeline" src="https://mega.ci.cf-app.com/pipelines/etcd?groups=compile-dependencies&groups=etcd"></iframe>
+        <iframe class="long-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/etcd"></iframe>
       </div>
     </div>
     <div class="row ">
