Fix dashboard css
Signed-off-by: Christian Ang <cang@pivotal.io>

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -32,11 +32,6 @@
         height: 50%;
       }
 
-      .shortest-pipeline {
-        height: 33%;
-      }
-
-
       .long-pipeline {
         height: 100%;
       }
@@ -54,8 +49,8 @@
     </div>
     <div class="row ">
       <div class="col-short">
-        <iframe class="shortest-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/bosh-test"></iframe>
-        <iframe class="shortest-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/destiny"></iframe>
+        <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/bosh-test"></iframe>
+        <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/destiny"></iframe>
       </div>
       <div class="col-long">
         <iframe class="long-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/consul?groups=consul"></iframe>
@@ -63,7 +58,7 @@
     </div>
     <div class="row">
       <div class="col-short">
-        <iframe class="shortest-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/gomegamatchers"></iframe>
+        <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/gomegamatchers"></iframe>
         <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/check-a-record"></iframe>
       </div>
       <div class="col-long">
