Update ci dashboard
[#145886049]

Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -40,29 +40,29 @@
   <body>
     <div class="row">
       <div class="col-short">
-        <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/dockerfiles"></iframe>
-        <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/infrastructure-ci"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/dockerfiles"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/infrastructure-ci"></iframe>
       </div>
       <div class="col-long">
-        <iframe class="long-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/etcd"></iframe>
+        <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/etcd"></iframe>
       </div>
     </div>
     <div class="row ">
       <div class="col-short">
-        <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/bosh-test"></iframe>
-        <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/destiny"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-test"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/destiny"></iframe>
       </div>
       <div class="col-long">
-        <iframe class="long-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/consul?groups=consul"></iframe>
+        <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/consul?groups=consul"></iframe>
       </div>
     </div>
     <div class="row">
       <div class="col-short">
-        <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/gomegamatchers"></iframe>
-        <iframe class="short-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/check-a-record"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/gomegamatchers"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/check-a-record"></iframe>
       </div>
       <div class="col-long">
-        <iframe class="long-pipeline" src="https://p-concourse.wings.cf-app.com/teams/system-team-infra-infra1-08f1/pipelines/bosh-bootloader?groups=smoke-tests&groups=cf-deployment&groups=bosh-bootloader"></iframe>
+        <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-bootloader?groups=smoke-tests&groups=cf-deployment&groups=bosh-bootloader"></iframe>
       </div>
     </div>
   </body>
