Add bosh-deployment to CI board.
Signed-off-by: Genevieve LEsperance <glesperance@pivotal.io>

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -60,6 +60,7 @@
       <div class="col-short">
         <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/gomegamatchers"></iframe>
         <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/check-a-record"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-deployment"></iframe>
       </div>
       <div class="col-long">
         <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-bootloader?groups=smoke-tests&groups=cf-deployment&groups=bosh-bootloader"></iframe>
