--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -28,6 +28,10 @@
         float: left;
       }
 
+      .mini-pipeline {
+        height: 33%;
+      }
+
       .short-pipeline {
         height: 50%;
       }
@@ -58,9 +62,9 @@
     </div>
     <div class="row">
       <div class="col-short">
-        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/gomegamatchers"></iframe>
-        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/check-a-record"></iframe>
-        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-deployment"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/gomegamatchers"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/check-a-record"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-deployment"></iframe>
       </div>
       <div class="col-long">
         <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-bootloader?groups=smoke-tests&groups=cf-deployment&groups=bosh-bootloader"></iframe>
