Add bbl-latest to CI board.
Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -53,8 +53,9 @@
     </div>
     <div class="row ">
       <div class="col-short">
-        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-test"></iframe>
-        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/destiny"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-test"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/destiny"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bbl-latest"></iframe>
       </div>
       <div class="col-long">
         <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/consul?groups=consul"></iframe>
