Add terraforming pipeline to dashboard.

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -47,8 +47,11 @@
         <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/dockerfiles"></iframe>
         <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/infrastructure-ci"></iframe>
       </div>
+      <div class="col-long">
+        <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/terraforming"></iframe>
+      </div>
     </div>
-    <div class="row ">
+    <div class="row">
       <div class="col-short">
         <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-test"></iframe>
         <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/destiny"></iframe>
