Add socks5-proxy pipeline to dashboard.
[#152085398]

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -44,8 +44,9 @@
   <body>
     <div class="row">
       <div class="col-short">
-        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/dockerfiles"></iframe>
-        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/infrastructure-ci"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/dockerfiles"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/infrastructure-ci"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/socks5-proxy"></iframe>
       </div>
       <div class="col-long">
         <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/terraforming"></iframe>
