Give 66% of right side to bbl row.

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -16,6 +16,10 @@
         height: 33.3%;
       }
 
+      .row-big {
+        height: 66.6%;
+      }
+
       .col-short {
         width: 26%;
         float: left;
@@ -52,7 +56,7 @@
         <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/terraforming"></iframe>
       </div>
     </div>
-    <div class="row">
+    <div class="row-big">
       <div class="col-short">
         <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/leftovers"></iframe>
         <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/az-automation"></iframe>
