Smaller than mini.

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -33,11 +33,11 @@
       }
 
       .mini-pipeline {
-        height: 33%;
+        height: 16.6%;
       }
 
       .short-pipeline {
-        height: 50%;
+        height: 33%;
       }
 
       .long-pipeline {
@@ -61,9 +61,9 @@
     </div>
     <div class="row">
       <div class="col-short">
-        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/dockerfiles"></iframe>
-        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/infrastructure-ci"></iframe>
-        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/socks5-proxy"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/dockerfiles"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/infrastructure-ci"></iframe>
+        <iframe class="short-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/socks5-proxy"></iframe>
       </div>
       <div class="col-long">
         <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/terraforming"></iframe>
