--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -65,7 +65,7 @@
         <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-deployment"></iframe>
       </div>
       <div class="col-long">
-        <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-bootloader?groups=smoke-tests&groups=cf-deployment&groups=bosh-bootloader"></iframe>
+        <iframe class="long-pipeline" src="https://ovoc.infrastructure.cf-app.com/teams/main/pipelines/bosh-bootloader?groups=bosh-bootloader"></iframe>
       </div>
     </div>
   </body>
