leftovers pipeline -> ovoc
Signed-off-by: Genevieve LEsperance <glesperance@pivotal.io>

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -58,7 +58,7 @@
     </div>
     <div class="row-big">
       <div class="col-short">
-        <iframe class="mini-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/leftovers"></iframe>
+        <iframe class="mini-pipeline" src="https://infra.ci.cf-app.com/teams/main/pipelines/leftovers"></iframe>
         <iframe class="mini-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/az-automation"></iframe>
         <iframe class="mini-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/bbl-latest"></iframe>
         <iframe class="mini-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/bosh-deployment"></iframe>
