New wings domain.

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -48,20 +48,20 @@
   <body>
     <div class="row">
       <div class="col-short">
-        <iframe class="short-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/dockerfiles"></iframe>
-        <iframe class="short-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/infrastructure-ci"></iframe>
-        <iframe class="short-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/socks5-proxy"></iframe>
+        <iframe class="short-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/dockerfiles"></iframe>
+        <iframe class="short-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/infrastructure-ci"></iframe>
+        <iframe class="short-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/socks5-proxy"></iframe>
       </div>
       <div class="col-long">
-        <iframe class="long-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/terraforming"></iframe>
+        <iframe class="long-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/terraforming"></iframe>
       </div>
     </div>
     <div class="row-big">
       <div class="col-short">
         <iframe class="mini-pipeline" src="https://infra.ci.cf-app.com/teams/main/pipelines/leftovers"></iframe>
-        <iframe class="mini-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/az-automation"></iframe>
-        <iframe class="mini-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/bbl-latest"></iframe>
-        <iframe class="mini-pipeline" src="https://wings.concourse-ci.org/teams/cf-infrastructure/pipelines/bosh-deployment"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/az-automation"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/bbl-latest"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/bosh-deployment"></iframe>
       </div>
       <div class="col-long">
         <iframe class="long-pipeline" src="https://infra.ci.cf-app.com/teams/main/pipelines/bosh-bootloader"></iframe>
