--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -59,9 +59,9 @@
     <div class="row-big">
       <div class="col-short">
         <iframe class="mini-pipeline" src="https://infra.ci.cf-app.com/teams/main/pipelines/leftovers"></iframe>
+        <iframe class="mini-pipeline" src="https://infra.ci.cf-app.com/teams/main/pipelines/bosh-deployment"></iframe>
         <iframe class="mini-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/az-automation"></iframe>
         <iframe class="mini-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/bbl-latest"></iframe>
-        <iframe class="mini-pipeline" src="https://wings.pivotal.io/teams/cf-infrastructure/pipelines/bosh-deployment"></iframe>
       </div>
       <div class="col-long">
         <iframe class="long-pipeline" src="https://infra.ci.cf-app.com/teams/main/pipelines/bosh-bootloader"></iframe>
