Revert "Remove consul pipeline yml."
This reverts commit 87118e00684cbd61525dab33769088816db4d363.

--- a/dashboards/infrastructure.html
+++ b/dashboards/infrastructure.html
@@ -58,6 +58,16 @@
     </div>
     <div class="row-big">
       <div class="col-short">
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bosh-test"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/az-automation"></iframe>
+        <iframe class="mini-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/bbl-latest"></iframe>
+      </div>
+      <div class="col-long">
+        <iframe class="long-pipeline" src="https://wings.concourse.ci/teams/cf-infrastructure/pipelines/consul?groups=consul"></iframe>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-short">
         <iframe class="mini-pipeline" src="https://infra.ci.cf-app.com/teams/main/pipelines/leftovers"></iframe>
         <iframe class="mini-pipeline" src="https://infra.ci.cf-app.com/teams/main/pipelines/bosh-deployment"></iframe>
         <iframe class="mini-pipeline" src="https://infra.ci.cf-app.com/teams/main/pipelines/az-automation"></iframe>
